--- a/package.json
+++ b/package.json
@@ -18,5 +18,5 @@
         "type": "git",
         "url": "https://github.com/voodootikigod/node-arduino.git"
     },
-    "engines": { "node": ">= 0.4.1" }
+    "engines": { "node": "10.0.0" }
 }
